# automotive-test-kit

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/knowledge_base/ai/chat_templates/: automotive_kb_template.md  cpp_project_generator.md  linkedin_poster_generator.md  proof_of_concepts_generator.md  python_project_generator.md
docs/knowledge_base/development/cmake/: readme.md
docs/knowledge_base/integration/: readme.md
docs/knowledge_base/integration/git/: readme.md
docs/knowledge_base/integration/github_actions/: readme.md
docs/knowledge_base/integration/jenkins/: readme.md
docs/knowledge_base/integration/plantuml/: readme.md
docs/knowledge_base/integration/yaml/: readme.md
docs/knowledge_base/programming/capl/: readme.md
docs/knowledge_base/programming/python/: readme.md
docs/knowledge_base/programming/python/basics/: 000_introduction.md  001_if_elif_else.md  002_match_case.md  003_loops.md  004_string.md  005_list.md  006_tuple.md  007_set.md  008_dictionary.md  009_array.md  010_functions.md  011_oop.md  012_error_exception_handling.md  013_iterator.md  014_generator.md  015_decorator.md  016_documentation.md
docs/knowledge_base/programming/python/usecases/: cantools.md  customtkinter.md  file_handling.md  gradio.md  multiprocessing.md  multithreading.md  opencv.md  pandas.md  pillow.md  poetry.md  py_canoe.md  pytest.md  python_can.md  regular_expressions.md  streamlit.md  tkinter.md  udsoncan.md  uv.md  webbrowser.md
docs/knowledge_base/projects/ABS/: readme.md
docs/knowledge_base/projects/ADAS/: readme.md
docs/knowledge_base/projects/ADAS/CEM/: readme.md
docs/knowledge_base/projects/ADAS/MFC/: readme.md
docs/knowledge_base/projects/ADAS/RVC/: readme.md
docs/knowledge_base/projects/BMS/: readme.md
docs/knowledge_base/projects/IPC/: readme.md
docs/knowledge_base/testing/: readme.md
docs/knowledge_base/testing/protocols/CAN/: readme.md
docs/knowledge_base/testing/protocols/DoIP/: readme.md
docs/knowledge_base/testing/test_environment/bench_setup/: readme.md
docs/knowledge_base/testing/test_environment/hardware_in_loop/: readme.md
docs/knowledge_base/testing/test_environment/software_in_loop/: readme.md
docs/knowledge_base/testing/tools/canalyzer/: readme.md
docs/knowledge_base/testing/tools/canoe/: readme.md
docs/knowledge_base/testing/tools/vector_hardware/: vn_hw_io_piggy.md
scripts/: build_all_packages.bat  deploy_docs_to_github.bat  publish_all_packages.bat  uv_sync_all_packages.bat  uv_sync_all_packages.sh  venv_setup.bat  venv_setup.sh
scripts/builds/: can_log_analyzer.bat  canmatrix_webapp.bat  chaitu_ycr.bat  crypto_lab.bat  hid_usb_relay.bat  kmtronic_usb_relay.bat  py_clocks.bat  py_uds_demo.bat  tenma_ps.bat
scripts/publish/: py_uds_demo.bat
scripts/run/: create_exe_py_clocks.bat  start_rest_api_hid_usb_relay.bat
scripts/tests/: can_log_analyzer.bat  canmatrix_webapp.bat  kmtronic_usb_relay.bat
search/: search_index.json
src/automotive_test_kit/: __init__.py  main.py
