[project]
name = "automotive_test_kit"
version = "25.1.0"
description = "Mono repo of @chaitu-ycr Includes various automotive test automation packages."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["automotive-test-kit", "automotive", "test", "automation", "packages"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "can-log-analyzer",
    "hid-usb-relay",
    "kmtronic-usb-relay",
    "py-canoe",
    "py-clocks",
    "py-uds-demo",
    "tenma-ps",
]

[dependency-groups]
dev = [
    "pyinstaller",
    "ruff",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-watch",
    "mkdocs-puml",
    "mkdocs-exclude",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/automotive-test-kit"
repository = "https://github.com/chaitu-ycr/automotive-test-kit"
documentation = "https://chaitu-ycr.github.io/automotive-test-kit/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
